brat/test/golden/kernel/deleteSnd.brat
deleteSnd :: { Qubit, Qubit -o Qubit }
deleteSnd = { q0, q1 => q0 }
